--- a/src/ba/unsa/etf/rpr/prozorDrzava.fxml
+++ b/src/ba/unsa/etf/rpr/prozorDrzava.fxml
@@ -13,15 +13,15 @@
 
 <GridPane gridLinesVisible="true" hgap="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="2.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.prozorDrzavaController">
     <children>
-        <Label onKeyReleased="#unosNaziv" text="Naziv" GridPane.halignment="CENTER" />
-        <Label onKeyReleased="#unosGlavniGrad" text="Glavni grad" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+        <Label onKeyReleased="#unosNaziv" text="%naziv" GridPane.halignment="CENTER" />
+        <Label onKeyReleased="#unosGlavniGrad" text="%gl_grad" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
         <TextField fx:id="naziv" onKeyReleased="#unosNaziv" GridPane.columnIndex="1">
             <GridPane.margin>
                 <Insets left="10.0" right="10.0" fx:id="x1" />
             </GridPane.margin>
         </TextField>
         <TextField fx:id="glavniGrad" onKeyReleased="#unosGlavniGrad" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="1" />
-        <Button id="POSALJI" fx:id="Posalji" mnemonicParsing="false" onAction="#submit" prefHeight="46.0" prefWidth="116.0" text="OK" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+        <Button id="POSALJI" fx:id="Posalji" mnemonicParsing="false" onAction="#submit" prefHeight="46.0" prefWidth="116.0" text="%ok" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
             <effect>
                 <ColorAdjust hue="-0.04580152671755722" saturation="0.03053435114503822">
                     <input>
