--- a/src/ba/unsa/etf/rpr/glavniProzor.fxml
+++ b/src/ba/unsa/etf/rpr/glavniProzor.fxml
@@ -60,6 +60,7 @@
             <Menu mnemonicParsing="false" text="%file">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#Prikazi" text="%prikazi" />
+                <MenuItem mnemonicParsing="false" onAction="#spasi" text="Save As" />
                 <MenuItem mnemonicParsing="false" text="%zatvori" />
               </items>
             </Menu>
